<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textStyle="bold"
    tools:context="com.example.gandh.currency_convertor.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/input_amount_read"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:id="@+id/input_amount" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_amount"
        android:id="@+id/radiogroup_1"
        android:layout_centerHorizontal="true"
        tools:layout_alignStart="@id/button_convert">

        <RadioButton
            android:text="@string/AUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/CAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/INR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_weight="1" />

    </RadioGroup>

    <TextView
        android:text="@string/convert_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/convert_to"
        android:textStyle="bold"
        android:textColor="#0e0101"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/radiogroup_1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/convert_to"
        android:id="@+id/radiogroup_2">

        <RadioButton
            android:text="@string/USD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/GBP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5"
            android:layout_weight="1" />

    </RadioGroup>


    <Button
        android:text="@string/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_convert"
android:layout_below="@id/radiogroup_2"
        android:layout_centerHorizontal="true"
        android:layout_weight="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/ouput_amount_write"
        android:background="@drawable/output"
        android:layout_below="@id/button_convert"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/output_amount"
        android:layout_weight="1" />

    <Button
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_clear"
        android:layout_below="@id/output_amount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_weight="1" />

</RelativeLayout>
